Covid-19_Dashboard.ipynb

--- a/Covid-19_Dashboard.ipynb
+++ b/Covid-19_Dashboard.ipynb
@@ -346,7 +346,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Based on UK Government [data](https://coronavirus.data.gov.uk/) published by [UKHSA](https://www.gov.uk/government/organisations/public-health-england) and on the [DIY Covid Dashboard Kit](https://github.com/fsmeraldi/diy-covid19dash), Copyright (C) Maria Bolea 2023. Released under the [GNU GPLv3.0 or later](https://www.gnu.org/licenses/)."
+    "Based on UK Government [data](https://coronavirus.data.gov.uk/) published by [UKHSA](https://www.gov.uk/government/organisations/public-health-england) and on the [DIY Covid Dashboard Kit](https://github.com/fsmeraldi/diy-covid19dash), Copyright (C) Maria Bolea, 2023. Released under the [GNU GPLv3.0 or later](https://www.gnu.org/licenses/)."
    ]
   },
   {
